--- a/embedded-containers-payara-micro/pom.xml
+++ b/embedded-containers-payara-micro/pom.xml
@@ -10,4 +10,12 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>fish.payara.extras</groupId>
+            <artifactId>payara-micro</artifactId>
+            <version>4.1.152.1</version>
+            <type>jar</type>
+        </dependency>
+    </dependencies>
 </project>
